
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="5dp"
android:paddingRight="5dp"
android:paddingTop="15dp"
tools:context="com.example.giorgos.ergasia.MainActivity"
android:background="@drawable/bk">

<LinearLayout

        android:id="@+id/linearLayout0"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

    <TextView
        android:id="@+id/timerValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="80sp"
        android:textColor="#ffff"
        android:text="@string/timerVal"
        android:textAlignment="center"
        android:background="#000"
        />
</LinearLayout>

<LinearLayout
    android:id="@+id/linearLayout1"
    android:layout_height="150dp"
    android:layout_width="match_parent"
    android:layout_below="@id/linearLayout0"
    >
    <Button
        android:text="@string/Button6"
        android:layout_height="match_parent"
        android:id="@+id/button6"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textColor="@android:color/background_light"

        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:background="@drawable/buttons"
        />

    <Button
        android:id="@+id/button7"
        android:layout_height="match_parent"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:text="@string/Button7"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:onClick="xartes"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:background="@drawable/buttons"
        />
</LinearLayout>

<LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_height="150dp"
    android:layout_below="@id/linearLayout1"
    android:layout_width="match_parent"
    >



    <Button
        android:textAllCaps="false"
        android:text="@string/Button8"
        android:layout_height="match_parent"
        android:textSize="21sp"
        android:id="@+id/button8"
        android:textColor="@android:color/background_light"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:background="@drawable/buttons"
        />
</LinearLayout>


</RelativeLayout>
