<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="15dp"
    tools:context="com.example.giorgos.ergasia.MainActivity"
    android:background="@drawable/bk">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_height="150dp"
        android:layout_width="match_parent">

        <Button
            android:text="@string/Button2"
            android:layout_height="match_parent"
            android:id="@+id/button2"
            android:textAllCaps="false"
            android:textSize="21sp"
            android:textColor="@android:color/background_light"
            android:onClick="xartes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/buttons"
            />

        <Button
            android:id="@+id/button1"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textSize="21sp"
            android:text="@string/Button1"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:onClick="podilatodromoi"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/buttons"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_height="150dp"
        android:layout_below="@id/linearLayout1"
        android:layout_width="match_parent">

        <Button
            android:textAllCaps="false"
            android:text="@string/Button4"
            android:layout_height="match_parent"
            android:textSize="21sp"
            android:id="@+id/button4"
            android:textColor="@android:color/background_light"
            android:onClick="xronometro"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/buttons"
            />

        <Button
            android:textAllCaps="false"
            android:text="@string/Button3"
            android:layout_height="match_parent"
            android:textSize="21sp"
            android:id="@+id/button3"
            android:textColor="@android:color/background_light"
            android:onClick="episkeves"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/buttons"
            />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_below="@id/linearLayout2"
            android:layout_height="140dp"
            android:layout_margin="35dp"
            android:layout_alignParentBottom="true">

        <Button
            android:text="Επειγουσα κληση"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:id="@+id/button5"
            android:textColor="@android:color/background_light"
            android:onClick="klisi"
            android:background="@drawable/button_em"
            />
    </LinearLayout>

    <Button
        android:text="i"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/button6"
        android:layout_width="30dp"
        android:textAllCaps="false"
        android:onClick="info"
        />

</RelativeLayout>
